# infernal

./: .gitignore  00CHECKLIST  00README  00README-MPI  00WISHLIST  COPYRIGHT  INSTALL  LICENSE  Makefile.in  README  README.md  SUBPACKAGES  cmcalibrate.sqc  configure.ac  configure.in  makeTAGS.sh
0.1/: 00README  Makefile.in  configure.ac
0.1/Bugs/: bugs.sqc  i15  i15.2
0.1/intro/: RNaseP_ecoli.fa  ssu_ecoli.fa  tutorial.db
0.1/matrices/: RIBOSUM45-40.mat  RIBOSUM55-35.mat  RIBOSUM60-40.mat  RIBOSUM60-50.mat  RIBOSUM60-85.mat  RIBOSUM65-55.mat  RIBOSUM65-75.mat  RIBOSUM70-40.mat  RIBOSUM70-65.mat  RIBOSUM70-70.mat  RIBOSUM80-35.mat  RIBOSUM80-40.mat  RIBOSUM80-55.mat  RIBOSUM80-65.mat  RIBOSUM85-45.mat  RIBOSUM90-55.mat  RIBOSUM95-55.mat
0.1/scripts/: cm_multi2indi.pl
0.1/src/: alphabet.c  cm.c  cm_dpalign.c  cm_dpsearch.c  cm_dpsmall.c  cm_modelconfig.c  cm_mx.c  cm_parsetree.c  cm_qdband.c  cmalign.c  cmbuild.c  cmcalibrate.c  cmemit.c  cmsearch.c  cp9.c  cp9_dp.c  cp9_modelmaker.c  cp9_mx.c  cp9_trace.c  display.c  errors.c  eweight.c  funcs.h  hmmband.c  hmmband.h  hybridsearch.c  logsum.c  mpisupport.c  my_p7_msvfilter.c  nearzero.prior  old_miscfuncs.c  p7_modelmaker.c  prior.c  seqstoaln.c  stats.c  trcyk.c
0.1/testsuite/: 10wide.mask  12.3.list  3trnas.fa  3trnas.gb  DicF-0.55.cm  DicF-1.1prealpha.cm  Makefile.in  at4.null  cmalign.sqc  cmemit.sqc  cmstat.sqc  cp9-test.c  ffs-frag.fa  mito-ascaris.gb  srp-euk.sto  sub_cm-test.c  trna-regression.fa
0.1/tutorial/: purine.1.c.cm  purine.3.sto  purine.psych.fa  rfam10.c.cm
1.0/: 00CHECKLIST  00README  00WISHLIST  COPYRIGHT  configure.ac
1.0/Bugs/: bugs.sqc  i13  i3  i9
1.0/Licenses/: gnu
1.0/iinfernal-1/: cm_config.h.in  cm_core.c  infernal.h
1.0/intro/: 5S_ecoli.fa  lsu.sto  lsu_ecoli.fa  tutorial.fa
1.0/matrices/: RIBOSUM100-25.mat  RIBOSUM100-55.mat  RIBOSUM100-80.mat  RIBOSUM100-85.mat  RIBOSUM100-90.mat  RIBOSUM45-30.mat  RIBOSUM45-50.mat  (+34 more)
1.1/: COPYRIGHT  configure.ac
Bugs/: 00README  BUGTRAX  bugs.sqc  i1  i11  i12  i14  i14.1  i14.2  i3  i6  i9
Licenses/: gnu
autobuild/: 00README  autobuild.pl  infernal_autobuilds.pl  intel-linux-gcc  intel-linux-icc-intel64-mpi  intel-macosx-gcc  intel-macosx-gcc-debug  ppc-aix-xlc  ppc-macosx
documentation/: Makefile.in
hmmer/: Makefile  alphabet.c  core_algorithms.c  debug.c  display.c  emit.c  emulation.c  evolution.c  fast_algorithms.c  funcs_orig.h  globals.h  histogram.c  hmmalign.c  hmmbuild.c  hmmbuild_cs.c  hmmbuild_orig.c  hmmcalibrate-pvm.c  hmmcalibrate.c  hmmconvert.c  hmmemit.c  hmmer_alphabet.c  hmmer_config.h  hmmer_funcs.h  hmmer_structs.h  hmmfetch.c  hmmindex.c  hmmio.c  hmmpfam-pvm.c  hmmpfam.c  hmmsearch-pvm.c  hmmsearch.c  infocontent.c  island.c  lsj_eweight.c  lsjfuncs.h  masks.c  mathsupport.c  matrices.c  misc.c  modelmakers.c  (+13 more)
iinfernal-1/: Makefile.in
intro/: 5S.sto  RNaseP.sto  SRP_euk.sto  lsu.sto  r17.sto  srp-eukaryote.sto  ssu.sto  trna.sto  trna1415.sto  trna_yeast_phe.fa  tutorial.big.db
matrices/: RIBOSUM100-25.mat  RIBOSUM100-30.mat  RIBOSUM100-35.mat  RIBOSUM100-40.mat  RIBOSUM100-45.mat  RIBOSUM100-50.mat  RIBOSUM100-55.mat  RIBOSUM100-60.mat  RIBOSUM100-65.mat  RIBOSUM100-70.mat  RIBOSUM100-75.mat  RIBOSUM100-80.mat  RIBOSUM100-85.mat  RIBOSUM100-90.mat  RIBOSUM100-95.mat  RIBOSUM100.mat  RIBOSUM45-30.mat  RIBOSUM45-35.mat  RIBOSUM45-40.mat  RIBOSUM45-45.mat  RIBOSUM45-50.mat  RIBOSUM45-55.mat  RIBOSUM45-60.mat  RIBOSUM45-65.mat  RIBOSUM45-70.mat  RIBOSUM45-75.mat  RIBOSUM45-80.mat  RIBOSUM45.mat  RIBOSUM55-25.mat  RIBOSUM55-30.mat  RIBOSUM55-35.mat  RIBOSUM55-40.mat  RIBOSUM55-45.mat  RIBOSUM55-50.mat  RIBOSUM55-55.mat  RIBOSUM55-60.mat  RIBOSUM55-65.mat  RIBOSUM55-70.mat  RIBOSUM55-75.mat  RIBOSUM55-80.mat  (+130 more)
release-notes/: 00CHECKLIST  LICENSE.tag  RELEASE-0.55  RELEASE-0.72  RELEASE-1.0.2  RELEASE-1.1  RELEASE-1.1.1  RELEASE-1.1.2  RELEASE-1.1.3.md  RELEASE-1.1.4.md  RELEASE-1.1.5.md  RELEASE-1.1rc1  RELEASE-1.1rc2  RELEASE-1.1rc4
rigfilters/: Makefile  Makefile.in  Makefile.in~
rmark/: 00README  Makefile.in  create-rmark.c  rmark-Rroc.pl  rmark-create.c  rmark-hitlist.pl  rmark-idpositives.pl  rmark-master.pl  rmark-mer.pl  rmark-multiply-evalues.pl  rmark-po-pp.sh  rmark-pp.sh  rmark-rocplot.c  rmark-time.pl  x-blastall  x-blastn  x-cmsearch  x-nhmmer  x-nhmmer2cmsearch  x-rfamscan  x-wublast
scripts/: cmsearch_pp.pl
src/: CP9_cm2wrhmm.c  CP9_hmmio.c  CP9_scan.c  Makefile.in  Rfam.12.1.claninfo  alphabet.c  bandcyk-montecarlo-test.c  bandcyk-truncation-test.c  bandcyk.c  cm.c  cm_alidisplay.c  cm_alndata.c  cm_cluster.c  cm_cp9_hybridsearch.c  cm_dispatch.c  cm_dispatch.h  cm_dpalign.c  cm_dpalign_trunc.c  cm_dpsearch.c  cm_dpsearch_trunc.c  cm_dpsmall.c  cm_errors.c  cm_eweight.c  cm_eweight.h  cm_fastalign.c  cm_fastsearch.c  cm_file.c  cm_filterinfo.c  cm_io.c  cm_masks.c  cm_modelconfig.c  cm_modelmaker.c  cm_mx.c  cm_p7_band.c  cm_p7_domaindef.c  cm_p7_modelconfig_trunc.c  cm_p7_modelmaker.c  cm_parsetree.c  cm_pipeline.c  cm_postprob.c  (+107 more)
testsuite/: 100k-3.fa  10k-3.fa  10k-Vault.fa  10k-tRNA.fa  1k-3.fa  1k-snR75.fa  1k.fa  2accn.list  2hairpins.sto  3.1p0.c.cm  3.1p0.cm  3.c.cm  3.calibrated.cm  3.sto  3pkhavs.fa  3trnas.embl  4.1p0.c.cm  4.1p0.cm  5.c.cm  5.claninfo  DicF-0.7.cm  DicF-1.0.1.cm  DicF.seed  Makefile  Makefile.in  Plant_SRP.1p0.c.cm  Plant_SRP.1p0.cm  Plant_SRP.c.cm  Plant_SRP.calibrated.cm  Plant_SRP.rfam10p1.seed.sto  Rfam.14.1.clanin  Vault.1p0.c.cm  Vault.1p0.cm  Vault.c.cm  Vault.rfam10p1.seed.sto  at25.null  bandcyk-montecarlo-test.c  bandcyk-truncation-test.c  benchmarks.sqc  bug-i1.pl  (+111 more)
trunk/: COPYRIGHT  Makefile.in  configure.ac
tutorial/: 5S_rRNA.c.cm  5S_rRNA.sto  Cobalamin.c.cm  Rfam.14.3.clanin  Rfam.14.9.clanin  minifam.cm  minifam.cm.i1f  minifam.cm.i1i  minifam.cm.i1m  minifam.cm.i1p  my.c.cm  my.cmaxid60.cm  my.cmaxid60.sto  my.rsearch.cm  purine.1.c.cm  purine.1.cm  purine.2.c.cm  purine.2.nofilter.cmsearch  purine2.fa  rfam10.c.cm  tRNA.cm  tRNA5-hand.c.cm  tRNA5-hand.frag.sto  tRNA5-hand.fraggiven.sto  tRNA5-hand.sto  tRNA5.c.cm  toalign.1.fa
(+1082 files in other folders)
